--- a/src/app/components/tutorials-list/tutorials-list.component.html
+++ b/src/app/components/tutorials-list/tutorials-list.component.html
@@ -20,15 +20,18 @@
     </div>
     <div class="col-md-6">
       <h4>Tutorials List</h4>
-      <ul class="list-group">
+      <ul class="list-group" *ngIf="tutorials.length">
         <li
           class="list-group-item"
           *ngFor="let tutorial of tutorials | paginate: { itemsPerPage: itemsPerPage, currentPage: currentPage, totalItems:totalItems }; let i = index; "
           [class.active]="i == currentIndex"
           (click)="setActiveTutorial(tutorial, i)"
         >
-          {{ tutorial.term }}<i class="fa fa-trash"></i>
+          {{ tutorial.term }}
         </li>
+      </ul>
+      <ul class="list-group" *ngIf="!tutorials.length">
+          Please add first tutorial
       </ul>
       <div *ngIf="tutorials.length != 0">
           <pagination-controls (pageChange)="pageChanged($event)"></pagination-controls>
